<resources>
    <string name="app_name">BuyList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_LOGIN">User or Password Incorret.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product">Product</string>
    <string name="data_limite">Data Limite</string>
    <string name="prioridade">Priority</string>
    <string name="all_lists">All Places Lists</string>
    <string name="all_products">All products</string>
    <string name="bought">Bought</string>
    <string name="max_data">Clique para adicionar a data limite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="already_registered">Email is already registered</string>
    <string name="fill_all_fields">\"Please, fill in all fields \"</string>
    <string name="product_s_name">Product\'s Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit_price">unit_Price</string>
</resources>