<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:padding="6dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/image_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/EditTextWhite"
        android:id="@+id/text_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@id/image_task"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/EditTextWhite"
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toEndOf="@id/image_task"
        app:layout_constraintTop_toBottomOf="@id/text_product" />
    <TextView
        style="@style/EditTextWhite"
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="x"
        app:layout_constraintStart_toEndOf="@id/text_quantity"
        app:layout_constraintTop_toTopOf="@id/text_quantity"
        app:layout_constraintEnd_toStartOf="@id/text_price"
        />
    <TextView
        style="@style/EditTextWhite"
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/unit_price"
        app:layout_constraintStart_toEndOf="@id/x"
        app:layout_constraintTop_toTopOf="@id/text_quantity"
        />

    <TextView
        style="@style/EditTextWhite"
        android:id="@+id/Total_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Price"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_product"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#ececec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>